
namespace RPGPrototype.Helpers
{
    public static class AnimationVariables
    {
        
        public const string MOUSE_DIRECTION_X = "MouseDirectionX";
        public const string MOUSE_DIRECTION_Y = "MouseDirectionY";

        public const string IS_MOVING = "IsMoving";
        public const string LAST_X = "LastX";
        public const string LAST_Y = "LastY";
        public const string MOVE_X = "MoveX";
        public const string MOVE_Y = "MoveY";

        public const string IS_ATTACKING = "IsAttacking";
        public const string ATTACK_SPEED = "AttackSpeed";
    }
}
